# uv_django

./: Dockerfile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{cookiecutter.project_app}}/: .dockerignore  .envrc_template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.config.js  docker-compose-deploy.yml  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
{{cookiecutter.project_app}}/.github/workflows/: tests.yml
{{cookiecutter.project_app}}/apps/search/: views.py
{{cookiecutter.project_app}}/apps/{{cookiecutter.primary_app}}/assets/js/: main.js
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/: urls.py  wsgi.py
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/assets/js/: src.js
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/assets/styles/: app.css
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/settings/: base.py  dev.py
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/templates/: base.html
