[project]
name = "{{ cookiecutter.project_app }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "psycopg[binary]",
    "dj-database-url",
    "whitenoise",
    "django-extensions",
    "django-model-utils",
    {%- if cookiecutter.project_type == 'wagtail' %}
    "wagtail",
    {%- endif %}
]

[dependency-groups]
dev =  [
    "django-debug-toolbar",
    "ipython",
    "invoke",
    "pre-commit",
    "black",
    "coverage",
    "model-bakery",
    {%- if cookiecutter.include_accessibility_tests == 'yes' %}
    "axe-selenium-python",
    {%- endif %}
    {%- if cookiecutter.testing_type == 'pytest' %}
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-subtests",
    {%- endif %}
    {%- if cookiecutter.project_type == 'django' -%}
    "beautifulsoup4",
    {%- endif %}
    {%- if cookiecutter.project_type == 'wagtail' %}
    "wagtail-factories",
    {%- endif %}
]

prod = [
    "uwsgi",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# This is the default for ruff, but I like to leave it in since it makes it obvious where and how to change things.
select = ["E4", "E7", "E9", "F"]
# Ignore import from star import errors. We use this extensively in the settings files
ignore = ["F405", "F403"]
